feat: merge result with join condition